--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="Top">
         <div class="Logo">Canine Friends 🐾</div>
         <a href="https://en.wikipedia.org/wiki/Dachshund" class="Link">Dachshund</a>
-        <a href="https://en.wikipedia.org/wiki/American_Staffordshire_Terrier" class="Link">American Staffordshire Terrier</a>
+        <a href="https://en.wikipedia.org/wiki/Corgi" class="Link">Corgi</a>
         <a href="https://en.wikipedia.org/wiki/Dobermann" class="Link">Dobermann</a>
         <div class="Top_Body">
             <div class="Body_text">
@@ -44,8 +44,8 @@
             </div>
         </div>
         <div class="Bottom_mid_page">
-            <div class="mid_bottom_text">“Ain't no rule saying a dog can't play basketball.”.</div>
-            <div class=mid_bottom_title>-Referee</div>
+            <div class="mid_bottom_text">“Ain't no rule saying a dog can't play basketball.”</div>
+            <div class=mid_bottom_title>-Air Bud Referee</div>
         </div>
         <div class="bottom_button">
             <div class="inside_text">
